--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,62 @@
+html {
+  height: 100%;
+}
 h1 {
-  color: blue;
+  color: white;
+  margin: 5px 0;
+}
+h2 {
+  margin: 2px;
+}
+header {
+  flex-direction: row;
+  align-items: center;
+  background-image: url(th.png);
+}
+body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+#my-picture {
+  padding: 5px;
+  width: 108px;
+  height: 108px;
+}
+
+#my-picture img {
+  border-radius: 50%;
+  border: 4px solid #fff;
+  background-color: #ffffff90;
+}
+
+body > section {
+  flex: 1;
+  padding: 15px;
+}
+
+#header-info {
+  flex: 1;
+  padding: 10px;
+  text-shadow: 1px 1px 2px #000000;
+}
+
+#job-title {
+  color: #ffffff;
+  margin: 5px 0;
+  font-weight: 100;
+  font-size: 1.2em;
+}
+#header-wraper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: linear-gradient(45deg, #0798abfa, transparent);
+}
+
+footer {
+  background-color: #057988;
+  color: white;
+  text-align: center;
 }
