--- a/src/style.css
+++ b/src/style.css
@@ -86,3 +86,13 @@ footer {
   color: white;
   text-align: center;
 }
+footer a,
+footer a:visited {
+  color: #f5f5f5;
+  vertical-align: top;
+  line-height: 20px;
+  display: inline-block;
+  padding: 2px 5px;
+  border-radius: 0.2em;
+  transition: 0.5s;
+}
