--- a/src/style.css
+++ b/src/style.css
@@ -20,8 +20,8 @@ body {
   margin: 0;
   background-color: #e9f6f8;
 }
-tbody tr:nth-of-type(odd) {
-  background: white;
+tbody tr:nth-child(even) {
+  background: #f2f2f2;
 }
 
 #my-picture {
