static html form

--- a/src/style.css
+++ b/src/style.css
@@ -81,7 +81,7 @@ body > section {
   width: 100%;
 }
 
-teamsTable tfoot input:not([type="image" i]) {
+#teamsTable tfoot input:not([type="image" i]) {
   box-sizing: border-box;
 }
 
