updt Readme and console exercises

--- a/src/style.css
+++ b/src/style.css
@@ -118,13 +118,13 @@ a {
 
 .edit-btn,
 .delete-btn {
-  color: blue;
+  color: #02638d;
   cursor: pointer;
 }
 
 .delete-btn:hover {
   text-decoration: underline;
-  color: red;
+  color: #b90303;
 }
 .edit-btn:hover {
   text-decoration: underline;
