--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,10 @@ h2 {
   margin: 2px;
 }
 
+a {
+  text-decoration: none;
+}
+
 header {
   flex-direction: row;
   align-items: center;
@@ -87,7 +91,7 @@ body > section {
 #teamsTable td {
   border: 1px solid #057988;
   padding: 5px;
-  line-height: 25px;
+  line-height: 29px;
   /* word-break: break-all; */
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -102,27 +106,6 @@ th {
   color: white;
 }
 
-footer {
-  padding: 5px;
-  background-color: #057988;
-  color: white;
-  text-align: center;
-}
-footer a,
-footer a:visited {
-  color: #f5f5f5;
-  vertical-align: top;
-  line-height: 20px;
-  display: inline-block;
-  padding: 2px 5px;
-  border-radius: 0.2em;
-  transition: 0.5s;
-}
-
-a {
-  text-decoration: none;
-}
-
 .table-actions {
   width: 80px;
 }
@@ -130,7 +113,7 @@ a {
   cursor: pointer;
   min-width: 34px;
   height: 28px;
-  text-align: center;
+  vertical-align: middle;
 }
 
 .edit-btn,
@@ -150,4 +133,21 @@ a {
 }
 .edit-btn:hover {
   color: #039903;
+}
+
+footer {
+  padding: 5px;
+  background-color: #057988;
+  color: white;
+  text-align: center;
+}
+footer a,
+footer a:visited {
+  color: #f5f5f5;
+  vertical-align: top;
+  line-height: 20px;
+  display: inline-block;
+  padding: 2px 5px;
+  border-radius: 0.2em;
+  transition: 0.5s;
 }
