fix unput type text for build

--- a/src/style.css
+++ b/src/style.css
@@ -82,7 +82,7 @@ body > section {
   table-layout: fixed;
 }
 
-#teamsTable input[type="text"] {
+#teamsTable input:not([type="checkbox"]) {
   width: 100%;
   box-sizing: border-box;
 }
